Fix Safari browser overflow hidden bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import "./styles/variables.scss";
 
-html body {
+html,
+body {
     overflow-x: hidden;
     position: relative;
 }
